[package]
name = "hermes-core"
version = "0.1.0"
edition = "2021"
authors = ["Project Hermes Team"]
description = "Core backend for Project Hermes secure messaging system"
license = "MIT"

[dependencies]
# Cryptography
ring = "0.17"           # Cryptographic primitives
ed25519-dalek = "2.0"   # Ed25519 signatures
x25519-dalek = "2.0"    # X25519 key exchange
aes-gcm = "0.10"        # AES encryption
chacha20poly1305 = "0.10" # ChaCha20-Poly1305 AEAD

# Networking
tokio = { workspace = true, features = ["full"] }
libp2p = { version = "0.52", features = ["tokio", "noise", "mplex", "yamux"] }  # P2P networking
futures = { workspace = true }
bytes = "1.0"           # Byte manipulation

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Error handling
thiserror = "1.0"
anyhow = { workspace = true }

# Logging (development only)
log = { version = "0.4", optional = true }
env_logger = { version = "0.9", optional = true }

# Testing
proptest = "1.3"
tokio-test = "0.4"

rand = "0.8"
uuid = { version = "1.0", features = ["v4"] }
chrono = "0.4"
sha2 = "0.10"
base64 = "0.21"

[dev-dependencies]
criterion = "0.5"       # Benchmarking
mockall = "0.11"        # Mocking for tests

[features]
default = []
test-utils = []         # Utilities for testing
debug = ["log", "env_logger"]  # Debug logging

[[bench]]
name = "crypto_benchmarks"
harness = false
