[workspace]
members = [
    "hermes-core",
    "hermes-cli"
]

[workspace.dependencies]
tokio = { version = "1.28", features = ["full"] }
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
rand = "0.8"
thiserror = "1.0"
futures = "0.3"
async-trait = "0.1"
bytes = "1.4"
tracing = "0.1"
tracing-subscriber = "0.3" 