[workspace]
members = [
    "hermes-core",
    "hermes-cli",
]
resolver = "2"

[workspace.dependencies]
# Networking
tokio = { version = "1", features = ["full"] }
futures = "0.3"
bytes = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
log = "0.4"
env_logger = "0.9"

# Additional dependencies
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = "0.3"
rand = "0.8"
sha2 = "0.10"
