[package]
name = "hermes-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
hermes-core = { path = "../hermes-core" }
tokio = { workspace = true, features = ["full"] }
anyhow = { workspace = true }
clap = { version = "4.3", features = ["derive"] }
log = { workspace = true }
env_logger = { workspace = true }
uuid = { version = "1.0", features = ["v4"] } 