[package]
name = "hermes-core"
version = "0.1.0"
edition = "2021"
authors = ["Project Hermes Team"]
description = "Core backend for Project Hermes secure messaging system"
license = "MIT"

[dependencies]
# Cryptography
ring = "0.17"
ed25519-dalek = "2.0"
x25519-dalek = { version = "2.0", features = ["serde"] }
aes-gcm = "0.10"
chacha20poly1305 = "0.10"

# Networking
tokio = { workspace = true }
libp2p = { version = "0.52", features = ["tokio", "noise", "yamux", "tcp", "identify", "ping", "macros", "serde"] }
futures = { workspace = true }
bytes = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
bincode = "1.3"

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Logging
log = { workspace = true, optional = true }
env_logger = { version = "0.9", optional = true }

# Testing
proptest = "1.3"
tokio-test = "0.4"

rand = { workspace = true, features = ["std"] }
rand_core = { version = "0.6", features = ["std"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = "0.4"
sha2 = { workspace = true }
base64 = "0.21"

# Additional dependencies
async-trait = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
hkdf = "0.12"
void = "1"

[dev-dependencies]
criterion = "0.5"
mockall = "0.11"

[features]
default = ["logging"]
test-utils = []
debug = ["env_logger"]
logging = ["log"] 